Fixed repainting the main system message and the text objects.

--- a/core/TODO
+++ b/core/TODO
@@ -1,4 +1,6 @@
 - clean up the code
+- clean up the mutexes
+- fix handling of redrawing the inter boxes
 - animations handling:
   - move code to correct places
   - add more comments
