--- a/core/TODO
+++ b/core/TODO
@@ -14,3 +14,8 @@
 
 - add a dirty tiles/rects system to handle prep_bgnds
   in a more sensible way
+
+- make the parser more user-friendly
+
+- fix error messages (doubled messages, etc)
+  - use log_warn and log_err
