--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -1,1 +1,8 @@
+Code authors and regular contributors
+-------------------------------------
+
+Bernard Blackham <bernard@blackham.com.au>
+ - functions for rendering MNG animations
+
 Michal Januszewski <spock@gentoo.org>
+ - everything else
