Set length of buf in daemon_comm() to PIPE_BUF.

--- a/core/TODO
+++ b/core/TODO
@@ -1,3 +1,9 @@
+- documentation update
+
+- (daemon) add gpm client code
+
+- monitor /dev/tty0 for keypresses (?)
+
 - convert all printerr/printwarn to iprint
 
 - handle con2fb_map properly
@@ -25,3 +31,5 @@ New features:
 =============
 
 - separate progress bars for shutdown/bootup
+
+- automatic theme resizing
