--- a/core/INSTALL
+++ b/core/INSTALL
@@ -2,21 +2,23 @@ Installation instructions
 -------------------------
 
 Before you begin compiling splashutils, please make sure that klibc
-1.0.14 or newer is installed on your system.
+1.0.14 or newer is installed on your system. It is essential that
+your klibc provides the `klcc' wrapper. Without `klcc' it will be
+impossible to build the splash_helper binary.
 
-If you have downloaded a 'lite' version of splashutils, you'll have
-to manually download the sourcecode of a few helper libraries and then
-extract it to the 'libs/' subdirectory. Depending on selected supported
-features these will be:
+If you have downloaded the 'lite' version of splashutils, you'll have
+to manually download the source code of a few helper libraries and then
+extract it to the 'libs/' subdirectory. Depending on selected features
+these will be:
 
  * jpeglib
  * png support: zlib, libpng
  * ttf support: freetype2
 
-After you've made sure that your system is properly configured,
-you can run the ./configure script to select various optional
-featues. Use `./configure --help` to see what options are available.
-Once this is done, you should proceed with:
+After making sure that your system is properly configured, you can run
+the ./configure script to select various optional featues. Use
+`./configure --help` to see what options are available. Once this step
+is done, you should proceed with:
 
  # make
  # make install
@@ -24,13 +26,12 @@ Once this is done, you should proceed with:
 The following make options might be useful:
 
 QUIET=false
- Makes the make output more verbose; especially useful in case 
+ Makes the make output more verbose; especially useful in case
  of compilation issues.
 
 JPEGSRC, LPNGSRC, ZLIBSRC, FT22SRC
- Use these options to specify where the sourcecode for a given
- library is located (when you're using the 'lite' splashutils 
- version).
+ Use these options to specify where the source of a given
+ library is located (when using the 'lite' splashutils version).
 
  Example:
  #  make JPEGSRC=libs/jpeg-6b ZLIBSRC=libs/zlib-1.2.3 \
