[gentoo] Misc updates and cleaups
- Properly cleanup all settings to avoid memory leaks.
- Respect default level other than 'default' and boot level other than
  'boot'.
- Don't try to process any events on runlevel changes during normal system
  operation.

--- a/gentoo/TODO
+++ b/gentoo/TODO
@@ -1,2 +1,3 @@
 - test autoconfig support
 - add debug option (kernel command line)
+- BUG: rc single, Ctrl+D hangs after 105 (start_in) checkroot, after going through 105, 106 clock
