--- a/core/TODO
+++ b/core/TODO
@@ -1,13 +1,15 @@
 Documentation
 =============
- - manpages for splash_util, splash_manager and splash_geninitramfs
- - automatic generation of ChangeLogs
+- manpages for splash_util, splash_manager and splash_geninitramfs
+- automatic generation of ChangeLogs
 
 Fixes
 =====
- - handle con2fb_map properly
- - add a dirty tiles/rects system to handle prep_bgnds
-   in a more sensible way
+- add a dirty tiles/rects system to handle prep_bgnds
+  in a more sensible way
+- handle DIRECTCOLOR modes in libsplashrender
+- handle KDGRAPHICS in libsplashrender (?)
+- remove fbd from config
 
 Clenanups
 =========
