core: add preliminary support for dirty rectangles (icons and boxes only)

--- a/core/TODO
+++ b/core/TODO
@@ -19,3 +19,5 @@ New features
 ============
 - automatic theme resizing
 - add effects (fadein/fadeout/blendin) for icon/anim
+- geninitramfs: -o, --overlay, suspend2 support?
+
