core: add dirty rectangles support for anim objects

--- a/core/TODO
+++ b/core/TODO
@@ -5,8 +5,9 @@ Documentation
 
 Fixes
 =====
-- add a dirty tiles/rects system to handle prep_bgnds
-  in a more sensible way
+- invalidation: handle service status changes
+- dirty rects: when an icon is disabled, add a rect area for repaint
+- render: move all sanity checks (position on screen) to bndrect calculation
 - handle DIRECTCOLOR modes in libsplashrender
 - handle KDGRAPHICS in libsplashrender (?)
 
