--- a/core/TODO
+++ b/core/TODO
@@ -6,6 +6,8 @@ Documentation
 Fixes
 =====
 - render: move all sanity checks (position on screen) to bndrect calculation
+- optimize rect-based rendering
+- document libsplash and libsplashrender
 
 New features
 ============
