--- a/core/README
+++ b/core/README
@@ -17,19 +17,19 @@ Here's a short description of provided programs, scripts and documents:
    The core application of this package. Provides support for the silent
    splash mode. Can be used as a command-line tool or run in daemon mode.
 
-   splash_helper
-   -------------
+   fbcondecor_helper
+   -----------------
    A simple and small program run directly by the kernel to:
     - initialize the silent mode during early stages of the boot-up process,
 	- provide the kernel with background images and theme configuration
 	  for the verbose splash mode.
 
    This program is only of any use if the kernel has been patched with
-   the 'fbsplash' patch. The patch can be downloaded from the splashutils
+   the 'fbcondecor' patch. The patch can be downloaded from the splashutils
    webpage.
 
-   For technical documentation on the kernel<->userspace fbsplash interface
-   please refer to <kernel sources>/Documentation/fb/splash.txt.
+   For technical documentation on the kernel<->userspace fbcondecor interface
+   please refer to <kernel sources>/Documentation/fb/fbcondecor.txt.
 
 2. Scripts
 
