core: documentation update (splash_util split and name changes)

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -5,4 +5,4 @@ Bernard Blackham <bernard@blackham.com.au>
  - functions for rendering MNG animations
 
 Michal Januszewski <spock@gentoo.org>
- - everything else
+ - (almost) everything else
