core: make the parser more strict about whitespace
The parser should enforce the existence of whitespace where necessary.
This patch makes whitespace mandatory between various elements of the
directives in the config file.  It also introduces a set of simple
unit tests for the parser.

--- a/core/TODO
+++ b/core/TODO
@@ -7,6 +7,8 @@ Fixes
 =====
 - render: move all sanity checks (position on screen) to bndrect calculation
 - optimize rect-based rendering
+- sanitize the parser unit tests
+- add unit tests for the rendering framework
 
 New features
 ============
