--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,5 +1,6 @@
+25 Nov 2007 * <spock@gentoo.org> * splashitils-1.5.3
 
- - Switched to an autotools-based configure system.
+ - Switch to an autotools-based configure system.
 
 23 Sep 2007 * <spock@gentoo.org> * splashutils-1.5.2.1
  - Fix sanity checks in splash_manager.
