--- a/gentoo/ChangeLog
+++ b/gentoo/ChangeLog
@@ -1,8 +1,11 @@
+ - Don't make the fbcondecor initscript fail when it can't set
+   the theme on a single tty and FBCONDECOR_TTY_MAP is used.
+
 25 Nov 2007 * <spock@gentoo.org> * splashutils-gentoo-1.0.9
  - Use 'exit staysilent' if the 'xdm' service has been started.
 
 23 Sep 2007 * <spock@gentoo.org> * splashutils-gentoo-1.0.8
- - Add explanatory comments in /etc/conf.d/splash
+ - Add explanatory comments in /etc/conf.d/splash.
 
 04 Sep 2007 * <spock@gentoo.org> * splashutils-gentoo-1.0.7
  - Add support for --type and --effects in splash-functions.sh for bl-1.
