--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,3 +1,4 @@
+16 Dec 2007 * <spock@gentoo.org> * splashutils-1.5.3.2
  - Fix rendering of text objects with hot spots other than top-left.
  - Fix a spurious free() call when processing static text objects.
  - Fix a segfault in the config file parser when there's an invalid
@@ -8,12 +9,10 @@
    splash_geninitramfs.
 
 05 Dec 2007 * <spock@gentoo.org> * splashutils-1.5.3.1
-
  - Make libfbsplash a dependency of libfbsplashrender.
  - Create tty0 in splash_geninitramfs.
 
 25 Nov 2007 * <spock@gentoo.org> * splashutils-1.5.3
-
  - Switch to an autotools-based configure system.
 
 23 Sep 2007 * <spock@gentoo.org> * splashutils-1.5.2.1
